--- a/Simbirsoft_workshop/app/src/main/res/values/colors.xml
+++ b/Simbirsoft_workshop/app/src/main/res/values/colors.xml
@@ -5,6 +5,34 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+
+    <!-- Custom color. -->
+    <color name="black_87">#de000000</color>
+    <color name="black_54">#8a000000</color>
+    <color name="macaroni_and_cheese">#f2b630</color>
+    <color name="cool_grey">#aabbbb</color>
+    <color name="blue_grey">#627f8f</color>
+    <color name="grey">#94998a</color>
+    <color name="warm_grey">#979797</color>
+    <color name="light_grey">#eaede8</color>
+    <color name="warm_grey_two">#757575</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="black">#FF000000</color>
+    <color name="coral">#f65d49</color>
+    <color name="off_white">#fffffd</color>
+    <color name="black_60">#99000000</color>
+    <color name="white_70">#b3ffffff</color>
+    <color name="black_12">#1e000000</color>
+    <color name="light_olive_green">#9ebf50</color>
+    <color name="black_70">#b3000000</color>
+    <color name="light_grey_two">#e8eded</color>
+    <color name="black_20">#33000000</color>
+    <color name="black_">#66979797</color>
+    <color name="melon">#fe7460</color>
+    <color name="pale_grey">#eff3f6</color>
+    <color name="leaf">#66a636</color>
+    <color name="leaf_second">#e666a636</color>
+    <color name="black_38">#61000000</color>
+
+
 </resources>
