--- a/Simbirsoft_workshop/app/src/main/res/values/themes.xml
+++ b/Simbirsoft_workshop/app/src/main/res/values/themes.xml
@@ -1,8 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Simbirsoft_workshop" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Simbirsoft_workshop" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">@color/leaf</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
@@ -10,7 +10,21 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">@color/leaf_second</item>
         <!-- Customize your theme here. -->
+    </style>
+
+    <style name="CircularProgress" parent="Theme.AppCompat.Light">
+        <item name="colorAccent">@color/leaf</item>
+    </style>
+
+    <style name="ToolbarTheme" parent="Theme.Simbirsoft_workshop" >
+        <item name="fontFamily">sans-serif</item>
+        <item name="fontWeight">800</item>
+    </style>
+
+    <style name="MySwitch" parent="Theme.AppCompat.Light">
+        <item name="colorControlActivated">@color/leaf</item>
+        <item name="trackTint">@color/leaf_second</item>
     </style>
 </resources>
