--- a/Simbirsoft_workshop/app/src/main/res/layout/fragment_profile.xml
+++ b/Simbirsoft_workshop/app/src/main/res/layout/fragment_profile.xml
@@ -11,20 +11,17 @@
         android:layout_height="match_parent"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
-
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/white">
+            android:background="@color/white"
+            android:orientation="vertical">
 
             <com.google.android.material.appbar.AppBarLayout
                 android:id="@+id/app_bar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fitsSystemWindows="true"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                android:fitsSystemWindows="true">
 
                 <com.google.android.material.appbar.CollapsingToolbarLayout
                     android:id="@+id/collapsingtoolbar"
@@ -40,8 +37,6 @@
                         android:scaleType="centerCrop"
                         android:src="@drawable/image_man"
                         app:layout_collapseMode="parallax"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
                     <androidx.appcompat.widget.Toolbar
@@ -54,7 +49,7 @@
 
                         <TextView
                             android:id="@+id/tv_profile"
-                            style="@style/TextStyle6"
+                            style="@style/TextStyle.BlueGrey.21"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="16dp"
@@ -69,60 +64,50 @@
 
             <TextView
                 android:id="@+id/tv_name"
-                style="@style/TextStyle1"
+                style="@style/TextStyle.Black87.24"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dimen_start"
                 android:layout_marginTop="@dimen/dimen_start"
-                android:text="@string/full_name"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/app_bar" />
+                android:text="@string/full_name" />
 
             <TextView
                 android:id="@+id/tv_bd_top"
-                style="@style/TextStyle2"
+                style="@style/TextStyle.Black38.12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dimen_start"
                 android:layout_marginTop="16dp"
-                android:text="@string/birthday_data_1"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_name" />
+                android:text="@string/birthday_data_1" />
 
             <TextView
                 android:id="@+id/tv_bd"
-                style="@style/TextStyle7"
+                style="@style/TextStyle.Black87.16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dimen_start"
-                android:text="@string/birthday_data"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_bd_top" />
+                android:text="@string/birthday_data" />
 
             <TextView
                 android:id="@+id/tv_sfera"
-                style="@style/TextStyle2"
+                style="@style/TextStyle.Black38.12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dimen_start"
                 android:layout_marginTop="10dp"
-                android:text="@string/sfera"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_bd" />
+                android:text="@string/sfera" />
 
             <TextView
                 android:id="@+id/tv_profession"
-                style="@style/TextStyle7"
+                style="@style/TextStyle.Black87.16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dimen_start"
-                android:text="@string/profession"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_sfera" />
+                android:text="@string/profession" />
 
             <Switch
                 android:id="@+id/switcher"
-                style="@style/TextStyle7"
+                style="@style/TextStyle.Black87.16.NoCenter"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dimen_start"
@@ -131,9 +116,6 @@
                 android:checked="true"
                 android:text="@string/push"
                 android:theme="@style/MySwitch"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_profession"
                 tools:ignore="UseSwitchCompatOrMaterialXml" />
 
             <ImageView
@@ -141,106 +123,43 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="18dp"
-                android:src="@drawable/separator"
-                app:layout_constraintTop_toBottomOf="@id/switcher" />
+                android:src="@drawable/separator" />
 
             <TextView
                 android:id="@+id/tv_your_friends"
-                style="@style/TextStyle2"
+                style="@style/TextStyle.Black38.12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dimen_start"
                 android:layout_marginTop="10dp"
-                android:text="@string/your_friend"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/separator1" />
+                android:text="@string/your_friend" />
 
-            <ImageView
-                android:id="@+id/avatar1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dimen_start"
-                android:layout_marginTop="16dp"
-                android:src="@drawable/avatar_3"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_your_friends" />
-
-            <TextView
-                android:id="@+id/tv_name_1"
-                style="@style/TextStyle7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dimen_start"
-                android:text="@string/name_1"
-                app:layout_constraintBottom_toBottomOf="@id/avatar1"
-                app:layout_constraintStart_toEndOf="@id/avatar1"
-                app:layout_constraintTop_toTopOf="@id/avatar1" />
-
-            <ImageView
-                android:id="@+id/avatar2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dimen_start"
-                android:layout_marginTop="10dp"
-                android:src="@drawable/avatar_2"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/avatar1" />
-
-            <TextView
-                android:id="@+id/tv_name_2"
-                style="@style/TextStyle7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dimen_start"
-                android:text="@string/name_2"
-                app:layout_constraintBottom_toBottomOf="@id/avatar2"
-                app:layout_constraintStart_toEndOf="@id/avatar2"
-                app:layout_constraintTop_toTopOf="@id/avatar2" />
-
-            <ImageView
-                android:id="@+id/avatar3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dimen_start"
-                android:layout_marginTop="10dp"
-                android:src="@drawable/avatar_1"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/avatar2" />
-
-            <TextView
-                android:id="@+id/tv_name_3"
-                style="@style/TextStyle7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dimen_start"
-                android:text="@string/name_3"
-                app:layout_constraintBottom_toBottomOf="@id/avatar3"
-                app:layout_constraintStart_toEndOf="@id/avatar3"
-                app:layout_constraintTop_toTopOf="@id/avatar3" />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_list_friends"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:itemCount="3"
+                tools:listitem="@layout/item_frined" />
 
             <ImageView
                 android:id="@+id/separator2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dimen_start"
-                android:src="@drawable/separator"
-                app:layout_constraintTop_toBottomOf="@id/avatar3" />
+                android:layout_marginTop="10dp"
+                android:src="@drawable/separator" />
 
             <Button
                 android:id="@+id/exit"
-                style="@style/TextStyle3"
+                style="@style/TextStyle.Black70.14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginTop="@dimen/dimen_start"
                 android:background="@color/leaf"
                 android:gravity="center"
                 android:text="@string/exit"
                 android:textAllCaps="false"
-                android:textColor="@color/white"
-                app:layout_constraintBottom_toTopOf="@id/navigation_view"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/separator2" />
+                android:textColor="@color/white" />
 
             <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/navigation_view"
@@ -248,12 +167,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
                 app:labelVisibilityMode="labeled"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/exit"
                 app:menu="@menu/menu_bottom_nav" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
 
