--- a/Simbirsoft_workshop/app/src/main/res/layout/fragment_profile.xml
+++ b/Simbirsoft_workshop/app/src/main/res/layout/fragment_profile.xml
@@ -27,14 +27,14 @@
                     android:id="@+id/collapsingtoolbar"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:background="@color/white"
                     app:layout_scrollFlags="scroll|enterAlwaysCollapsed">
 
                     <ImageView
                         android:id="@+id/iv_man"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="200dp"
                         android:layout_marginTop="?attr/actionBarSize"
-                        android:scaleType="centerCrop"
                         android:src="@drawable/image_man"
                         app:layout_collapseMode="parallax"
                         app:layout_constraintTop_toBottomOf="@id/toolbar" />
