--- a/Simbirsoft_workshop/app/src/main/res/layout/fragment_profile.xml
+++ b/Simbirsoft_workshop/app/src/main/res/layout/fragment_profile.xml
@@ -6,170 +6,184 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.core.widget.NestedScrollView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
+        android:layout_height="match_parent">
 
-        <LinearLayout
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/white"
-            android:orientation="vertical">
+            android:layout_height="0dp"
+            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+            app:layout_constraintBottom_toTopOf="@id/navigation_view"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <com.google.android.material.appbar.AppBarLayout
-                android:id="@+id/app_bar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fitsSystemWindows="true">
-
-                <com.google.android.material.appbar.CollapsingToolbarLayout
-                    android:id="@+id/collapsingtoolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/white"
-                    app:layout_scrollFlags="scroll|enterAlwaysCollapsed">
-
-                    <ImageView
-                        android:id="@+id/iv_man"
-                        android:layout_width="match_parent"
-                        android:layout_height="200dp"
-                        android:layout_marginTop="?attr/actionBarSize"
-                        android:src="@drawable/image_man"
-                        app:layout_collapseMode="parallax"
-                        app:layout_constraintTop_toBottomOf="@id/toolbar" />
-
-                    <androidx.appcompat.widget.Toolbar
-                        android:id="@+id/toolbar"
-                        android:layout_width="match_parent"
-                        android:layout_height="?attr/actionBarSize"
-                        android:background="@color/leaf"
-                        app:layout_collapseMode="pin"
-                        app:menu="@menu/menu_edit">
-
-                        <TextView
-                            android:id="@+id/tv_profile"
-                            style="@style/TextStyle.BlueGrey.21"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="16dp"
-                            android:text="@string/profile"
-                            android:textColor="@color/white"
-                            android:textFontWeight="800" />
-                    </androidx.appcompat.widget.Toolbar>
-
-                </com.google.android.material.appbar.CollapsingToolbarLayout>
-
-            </com.google.android.material.appbar.AppBarLayout>
-
-            <TextView
-                android:id="@+id/tv_name"
-                style="@style/TextStyle.Black87.24"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dimen_start"
-                android:layout_marginTop="@dimen/dimen_start"
-                android:text="@string/full_name" />
-
-            <TextView
-                android:id="@+id/tv_bd_top"
-                style="@style/TextStyle.Black38.12"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dimen_start"
-                android:layout_marginTop="16dp"
-                android:text="@string/birthday_data_1" />
-
-            <TextView
-                android:id="@+id/tv_bd"
-                style="@style/TextStyle.Black87.16"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dimen_start"
-                android:text="@string/birthday_data" />
-
-            <TextView
-                android:id="@+id/tv_sfera"
-                style="@style/TextStyle.Black38.12"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dimen_start"
-                android:layout_marginTop="10dp"
-                android:text="@string/sfera" />
-
-            <TextView
-                android:id="@+id/tv_profession"
-                style="@style/TextStyle.Black87.16"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dimen_start"
-                android:text="@string/profession" />
-
-            <Switch
-                android:id="@+id/switcher"
-                style="@style/TextStyle.Black87.16.NoCenter"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dimen_start"
-                android:layout_marginTop="28dp"
-                android:layout_marginEnd="@dimen/dimen_start"
-                android:checked="true"
-                android:text="@string/push"
-                android:theme="@style/MySwitch"
-                tools:ignore="UseSwitchCompatOrMaterialXml" />
-
-            <ImageView
-                android:id="@+id/separator1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="18dp"
-                android:src="@drawable/separator" />
-
-            <TextView
-                android:id="@+id/tv_your_friends"
-                style="@style/TextStyle.Black38.12"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dimen_start"
-                android:layout_marginTop="10dp"
-                android:text="@string/your_friend" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_list_friends"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:itemCount="3"
-                tools:listitem="@layout/item_frined" />
+                android:background="@color/white"
+                android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/separator2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:src="@drawable/separator" />
+                <com.google.android.material.appbar.AppBarLayout
+                    android:id="@+id/app_bar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fitsSystemWindows="true">
 
-            <Button
-                android:id="@+id/exit"
-                style="@style/TextStyle.Black70.14"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/dimen_start"
-                android:background="@color/leaf"
-                android:gravity="center"
-                android:text="@string/exit"
-                android:textAllCaps="false"
-                android:textColor="@color/white" />
+                    <com.google.android.material.appbar.CollapsingToolbarLayout
+                        android:id="@+id/collapsingtoolbar"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/white"
+                        app:layout_scrollFlags="scroll|enterAlwaysCollapsed">
 
-            <com.google.android.material.bottomnavigation.BottomNavigationView
-                android:id="@+id/navigation_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
-                app:labelVisibilityMode="labeled"
-                app:menu="@menu/menu_bottom_nav" />
-        </LinearLayout>
+                        <ImageView
+                            android:id="@+id/iv_man"
+                            android:layout_width="match_parent"
+                            android:layout_height="200dp"
+                            android:layout_marginTop="?attr/actionBarSize"
+                            android:src="@drawable/image_man"
+                            app:layout_collapseMode="parallax"
+                            app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
-    </androidx.core.widget.NestedScrollView>
+                        <androidx.appcompat.widget.Toolbar
+                            android:id="@+id/toolbar"
+                            android:layout_width="match_parent"
+                            android:layout_height="?attr/actionBarSize"
+                            android:background="@color/leaf"
+                            app:layout_collapseMode="pin"
+                            app:menu="@menu/menu_edit">
+
+                            <TextView
+                                android:id="@+id/tv_profile"
+                                style="@style/TextStyle.BlueGrey.21"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginEnd="16dp"
+                                android:text="@string/profile"
+                                android:textColor="@color/white"
+                                android:textFontWeight="800" />
+                        </androidx.appcompat.widget.Toolbar>
+
+                    </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+                </com.google.android.material.appbar.AppBarLayout>
+
+                <TextView
+                    android:id="@+id/tv_name"
+                    style="@style/TextStyle.Black87.24"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/dimen_start"
+                    android:layout_marginTop="@dimen/dimen_start"
+                    android:text="@string/full_name" />
+
+                <TextView
+                    android:id="@+id/tv_bd_top"
+                    style="@style/TextStyle.Black38.12"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/dimen_start"
+                    android:layout_marginTop="16dp"
+                    android:text="@string/birthday_data_1" />
+
+                <TextView
+                    android:id="@+id/tv_bd"
+                    style="@style/TextStyle.Black87.16"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/dimen_start"
+                    android:text="@string/birthday_data" />
+
+                <TextView
+                    android:id="@+id/tv_sfera"
+                    style="@style/TextStyle.Black38.12"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/dimen_start"
+                    android:layout_marginTop="10dp"
+                    android:text="@string/sfera" />
+
+                <TextView
+                    android:id="@+id/tv_profession"
+                    style="@style/TextStyle.Black87.16"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/dimen_start"
+                    android:text="@string/profession" />
+
+                <Switch
+                    android:id="@+id/switcher"
+                    style="@style/TextStyle.Black87.16.NoCenter"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/dimen_start"
+                    android:layout_marginTop="28dp"
+                    android:layout_marginEnd="@dimen/dimen_start"
+                    android:checked="true"
+                    android:text="@string/push"
+                    android:theme="@style/MySwitch"
+                    tools:ignore="UseSwitchCompatOrMaterialXml" />
+
+                <ImageView
+                    android:id="@+id/separator1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="18dp"
+                    android:src="@drawable/separator" />
+
+                <TextView
+                    android:id="@+id/tv_your_friends"
+                    style="@style/TextStyle.Black38.12"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/dimen_start"
+                    android:layout_marginTop="10dp"
+                    android:text="@string/your_friend" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_list_friends"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    tools:itemCount="3"
+                    tools:listitem="@layout/item_friend" />
+
+                <ImageView
+                    android:id="@+id/separator2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:src="@drawable/separator" />
+
+                <Button
+                    android:id="@+id/exit"
+                    style="@style/TextStyle.Black70.14"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/dimen_start"
+                    android:background="@color/leaf"
+                    android:gravity="center"
+                    android:text="@string/exit"
+                    android:textAllCaps="false"
+                    android:textColor="@color/white" />
+
+            </LinearLayout>
+
+        </androidx.core.widget.NestedScrollView>
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/navigation_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            app:labelVisibilityMode="labeled"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:menu="@menu/menu_bottom_nav" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
